Fix post link spacing

--- a/mods/redsquare/web/css/redsquare-base.css
+++ b/mods/redsquare/web/css/redsquare-base.css
@@ -3,7 +3,8 @@ html, body {
 }
 
 .tweet-text a {
-  position: absolute;
+  /* not sure why its absolute here */
+  /*position: absolute;*/
 }
 
 .saito-new-tweets {
